<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_cart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_column="1"
    android:layout_columnWeight="1"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/primage"
            android:layout_width="113dp"
            android:layout_height="93dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtprname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/card_cart_product_name"
                android:textAlignment="center"
                android:textColor="#111"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtprprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/card_cart_product_price"
                android:textAlignment="center"
                android:textColor="#111"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtprcountry"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_marginTop="10dp"
                android:text="@string/card_cart_product_country"
                android:textAlignment="center"
                android:textColor="#111"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>